<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoskActivity">

    <LinearLayout
        android:id="@+id/panelTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/design_default_color_primary_dark"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/buttonTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/voiceCaption"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/appQuit"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"

            android:background="@drawable/exitxml"
            android:importantForAccessibility="no" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonTop"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@id/panelClient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/panelTop"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/recognize_file"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recognize_file"
            app:layout_constraintBottom_toTopOf="@+id/recognize_mic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/pause"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOff="@string/pause"
            android:textOn="@string/continueRecognition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recognize_mic" />

        <Button
            android:id="@+id/recognize_mic"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recognize_microphone"
            app:layout_constraintBottom_toTopOf="@+id/pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recognize_file" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/panelBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/design_default_color_primary_dark"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/panelClient">

        <ImageButton
            android:id="@+id/pageStart"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/leftdxml96x86"

            android:importantForAccessibility="no" />

        <ImageButton
            android:id="@+id/pageLeft"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/leftxml96x86"
            android:importantForAccessibility="no"

            android:longClickable="true" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/panelClient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@id/panelBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonTop">

        <ScrollView
            android:id="@+id/scroll_view_text"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:layout_gravity="top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:scrollbars="vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </ScrollView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="?android:attr/listDivider" />

        <ScrollView
            android:id="@+id/scroll_vew_text_code"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:layout_gravity="bottom|center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/result_text_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:scrollbars="vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </ScrollView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>